--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="bg">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/655cb1bcbdfe565b18cde5bd_Risorsa%2053.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Endurance - Контролен Панел</title>
     
